# OpenGLESDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/glm/: CMakeLists.txt
app/libs/zip/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Data.cpp  Data.h  FileUtils.cpp  FileUtils.h  JNIHelper.cpp  JNIHelper.h  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.h  com_example_zhzl_myapp_GLES3JNILib.h  com_example_zhzl_myapp_JNIHelper.cpp  com_example_zhzl_myapp_JNIHelper.h  gles3jni.cpp
app/src/main/java/com/example/zhzl/myapp/: GLES3JNILib.java  GLES3JNIRenderer.java  GLES3JNIView.java  JNIHelper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
